--- a/styles/pages/kindergarten-page.css
+++ b/styles/pages/kindergarten-page.css
@@ -339,6 +339,222 @@
 }
 
 
+/* БЛОК РЕЖИМ ДНЯ */
+.daily-schedule {}
+
+.daily-schedule__container {}
+
+.daily-schedule__title {}
+
+.daily-schedule__body {}
+
+.daily-schedule__items {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.daily-schedule__item {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+}
+
+.daily-schedule__item-bg-image-wrap {
+    position: absolute;
+    top: 43px;
+    right: 423px;
+    max-width: 187px;
+    max-height: 187px;
+    z-index: 1;
+}
+
+.daily-schedule__item-bg-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.daily-schedule__times {
+    position: relative;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    max-width: 610px;
+}
+
+.daily-schedule__time-item {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    padding: 8.5px 0px;
+    font-size: 16px;
+    line-height: 130%;
+}
+
+.daily-schedule__time-parts {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.daily-schedule__time-start {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 77px;
+    padding: 8px 0px;
+    border-radius: 12px;
+    background-color: #4E6932;
+    font-weight: 600;
+    color: #FFF;
+}
+
+.daily-schedule__time-divider {
+    height: 2px;
+    width: 15px;
+    background-color: #CFCFCF;
+}
+
+.daily-schedule__time-end {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 77px;
+    padding: 8px 0px;
+    border-radius: 12px;
+    background-color: #BACC92;
+    font-weight: 600;
+    color: #FFF;
+}
+
+.daily-schedule__time-text {}
+
+.daily-schedule__video-poster-wrap {
+    position: relative;
+    z-index: 5;
+    max-width: 399px;
+    max-height: 270px;
+    border-radius: 24px;
+    overflow: hidden;
+}
+
+.daily-schedule__video-poster-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 1361px) {}
+
+@media (max-width: 1281px) {
+    .daily-schedule__item-bg-image-wrap {
+        right: 413px;
+        max-width: 143px;
+    }
+
+    .daily-schedule__time-item {
+        gap: 40px;
+        padding: 8.5px 0px;
+    }
+}
+
+@media (max-width: 992px) {
+    .daily-schedule__item {
+        gap: 40px;
+    }
+
+    .daily-schedule__item-bg-image-wrap {
+        right: 294px;
+        max-width: 100px;
+    }
+
+    .daily-schedule__time-item {
+        gap: 20px;
+        padding: 7px 0px;
+        font-size: 15px;
+    }
+
+    .daily-schedule__time-start {
+        width: 72px;
+    }
+
+    .daily-schedule__time-end {
+        width: 72px;
+    }
+
+    .daily-schedule__video-poster-wrap {
+        max-width: 290px;
+    }
+}
+
+@media (max-width: 769px) {
+    .daily-schedule__items {
+        gap: 15px;
+    }
+
+    .daily-schedule__item-bg-image-wrap {
+        top: 5px;
+        right: 30px;
+        opacity: 0.5;
+        max-width: 170px;
+    }
+
+    .daily-schedule__time-start {
+        width: 65px;
+    }
+
+    .daily-schedule__time-end {
+        width: 65px;
+    }
+
+    .daily-schedule__video-poster-wrap {
+        display: none;
+    }
+}
+
+@media (max-width: 651px) {
+    .daily-schedule__time-item {
+        gap: 20px;
+        padding: 5px 0px;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 551px) {
+    .daily-schedule__item-bg-image-wrap {
+        top: 0px;
+        right: 0px;
+        opacity: 0.5;
+        max-width: 120px;
+    }
+
+    .daily-schedule__time-divider {
+        display: none;
+    }
+
+    .daily-schedule__time-end {
+        display: none;
+    }
+}
+
+@media (max-width: 431px) {
+    .daily-schedule__item-bg-image-wrap {
+        max-width: 90px;
+    }
+
+    .daily-schedule__time-item {
+        font-size: 14px;
+    }
+
+    .daily-schedule__time-start {
+        width: 60px;
+    }
+}
+
+
 /* ГРУППА БЛОКОВ ОПИСЫВАЮЩИХ СТИЛЬ ЖИЗНИ (ЗДОРОВОЕ ПИТАНИЕ, ПРОГУЛКИ С ПОЛЬЗОЙ, МЕДИЦИНСКОЕ СОПРОВОЖДЕНИЕ) */
 .lifestyle {
     position: relative;
